# sdk-nrf-private-v2

dect_nrplus/: CMakeLists.txt  Kconfig.dect_cvg  Kconfig.dect_dlc  Kconfig.dect_nrplus  dect_cvg.c  dect_dlc.c
dect_nrplus/docs/: Testing 0407 extended.txt  Testing 0407.txt
dect_nrplus/example/: CMakeLists.txt  prj.conf
dect_nrplus/example/src/: main.c
dect_nrplus/include/mac/: dect_mac_core.h  dect_mac_main.h  dect_mac_main_dispatcher.h  dect_mac_mgmt.h  dect_mac_nvs.h  dect_mac_pdu.h  dect_mac_phy_ctrl.h  dect_mac_phy_if.h  dect_mac_sm.h  dect_mac_sm_pt.h  dect_mac_timeline_utils.h
dect_nrplus/mac/: CMakeLists.txt  dect_mac_api.c  dect_mac_data_path.c  dect_mac_main_dispatcher.c  dect_mac_nvs.c  dect_mac_phy_ctrl.c  dect_mac_phy_if.c  dect_mac_security - Copy.c  dect_mac_security.c  dect_mac_shell.c  dect_mac_sm_pt.c  dect_mac_timeline_utils.c  mock_nrf_modem_dect_phy.c
dect_nrplus/samples/mac_flow/: CMakeLists.txt  prj.conf
dect_nrplus/samples/mac_flow/TEST/: CMakeLists.txt  Kconfig  testcase.yamlXXX
dect_nrplus/samples/mac_flow/src/: main.c
dect_nrplus/samples/shell/: CMakeLists.txt
dect_nrplus/samples/shell/OLD/: OLDprj.conf
dect_nrplus/samples/shell/boards/: nrf9151dk_nrf9151_ns - Copy.overlay
dect_nrplus/tests/advanced_mac/: testcase.yaml
dect_nrplus/tests/cdd_service/: testcase.yaml
dect_nrplus/tests/cvg_advanced/: prj.conf
dect_nrplus/tests/cvg_advanced/src/: main.c
dect_nrplus/tests/dlc_advanced/: prj.conf
dect_nrplus/tests/dlc_advanced/src/: main.c
dect_nrplus/tests/dlc_sar/: testcase.yaml
dect_nrplus/tests/l2_6lowpan/: prj.conf
dect_nrplus/tests/mac_api/: prj.conf
dect_nrplus/tests/mac_api/src/: main.c
dect_nrplus/tests/mac_association/: prj.conf  testcase.yaml
dect_nrplus/tests/mac_error_handling/: prj.conf
dect_nrplus/tests/mac_flow/: prj - Copy.conf
dect_nrplus/tests/mac_flow - Copy/: testcase.yaml
dect_nrplus/tests/mac_flow - Copy/boards/OLD/: nrf9151dk_nrf9151_ns.conf
dect_nrplus/tests/mac_pdu/manual_tests/: test_rach_ie.c
dect_nrplus/tests/mac_pdu/test_assoc_ies/: testcase.yaml
dect_nrplus/tests/mac_pdu/test_rach_ie/: prj.conf
dect_nrplus/tests/mac_pdu/test_security/: prj.conf  testcase.yaml
dect_nrplus/tests/mocks/: mock_nrf_modem_dect_phy.h
dect_nrplus/tests/ztester/: Kconfig.txt  dect_nrplus.code-workspace
dect_nrplus/tests/ztester/src/: test_mac_flow.c
drivers/net/dect_nrplus/: CMakeLists.txt  Kconfig.dect_nrplus  dect_nrplus.c  dect_nrplus.h
dts/bindings/net/: nordic,dect-nrplus.yaml
lib/dect_nrplus/: Kconfig.dect_mac  Kconfig.dect_module  Kconfig.dect_nrplus  dect_cdd.c  dect_cvg.c  prj.conf
lib/dect_nrplus/docs/: overview.rtf
lib/dect_nrplus/example/: prj.confOLD
lib/dect_nrplus/example/boards/: nrf9151dk_nrf9151_ns.overlay
lib/dect_nrplus/include/: dect_cdd.h  dect_cvg.h  dect_dlc.h
lib/dect_nrplus/include/mac/: dect_mac_api.h  dect_mac_context.h  dect_mac_data_path.h  dect_mac_phy_tbs_tables.h  dect_mac_sm_ft.h  nrf_modem_dect_phy.h
lib/dect_nrplus/include/mocks/: mock_nrf_modem_dect_phy.h
lib/dect_nrplus/mac/: dect_mac_core.c  dect_mac_main.c  dect_mac_mgmt.c  dect_mac_pdu.c  dect_mac_phy_tbs_tables.c  dect_mac_security.c  dect_mac_securityGROK.c  dect_mac_securityPreGROK.c  dect_mac_sm_ft.c
lib/dect_nrplus/samples/shell/: prj.conf
lib/dect_nrplus/samples/shell/src/: main.c
lib/dect_nrplus/tests/: CMakeLists.txt
lib/dect_nrplus/tests/advanced_mac/: prj.conf
lib/dect_nrplus/tests/advanced_mac/src/: main.c
lib/dect_nrplus/tests/cdd_service/: prj.conf
lib/dect_nrplus/tests/cdd_service/src/: main.c
lib/dect_nrplus/tests/cvg_advanced/: testcase.yaml
lib/dect_nrplus/tests/dlc_advanced/: testcase.yaml
lib/dect_nrplus/tests/dlc_sar/: prj.conf
lib/dect_nrplus/tests/dlc_sar/src/: main.c
lib/dect_nrplus/tests/l2_6lowpan/: testcase.yaml
lib/dect_nrplus/tests/l2_6lowpan/src/: main.c
lib/dect_nrplus/tests/mac_api/: CMakeLists.txt  testcase.yaml
lib/dect_nrplus/tests/mac_association/src/: main.c
lib/dect_nrplus/tests/mac_error_handling/: testcase.yaml
lib/dect_nrplus/tests/mac_error_handling/src/: main.c
lib/dect_nrplus/tests/mac_flow/: prj.conf
lib/dect_nrplus/tests/mac_flow - Copy/: CMakeLists.txt
lib/dect_nrplus/tests/mac_flow - Copy/src/: main.c
lib/dect_nrplus/tests/mac_flow/ZZZ/: prj - Copy.conf  prj.confBAD
lib/dect_nrplus/tests/mac_flow/boards/OLD/: nrf9151dk_nrf9151_ns.conf2.conf
lib/dect_nrplus/tests/mac_flow/src/: main.c  mock_nrf_modem_dect_phy.c
lib/dect_nrplus/tests/mac_pdu/: CMakeLists.txt
lib/dect_nrplus/tests/mac_pdu/test_assoc_ies/src/: main.c
lib/dect_nrplus/tests/mac_pdu/test_mac_ies/: main.c  testcase.yaml
lib/dect_nrplus/tests/mac_pdu/test_rach_ie/: testcase.yaml
lib/dect_nrplus/tests/mac_pdu/test_rach_ie/src/: main.c
lib/dect_nrplus/tests/mac_pdu/test_security/src/: main.c
lib/dect_nrplus/tests/mocks/: mock_nrf_modem_dect_phy.c
lib/dect_nrplus/tests/mocks/OLD/: mock_nrf_modem_dect_phy.h
lib/dect_nrplus/tests/security_setup/: CMakeLists.txt  prj.conf
lib/dect_nrplus/tests/security_setup/include/: dect_mac_security.h
lib/dect_nrplus/tests/security_setup/tests/: test_dect_mac_security.c
lib/dect_nrplus/tests/ztester/: CMakeLists.txt  prj - Copy.conf  prj.conf
lib/dect_nrplus/tests/ztester/src/: mock_nrf_modem_dect_phy.h
samples/benchmarks/coremark/boards/: nrf54l15dk_nrf54l15_cpuapp.overlay
